<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_beranda">

    <fragment
        android:id="@+id/navigation_riwayat"
        android:name="com.sana.ui.riwayat.RiwayatFragment"
        android:label="@string/title_riwayat"
        tools:layout="@layout/fragment_riwayat" />

    <fragment
        android:id="@+id/navigation_komunitas"
        android:name="com.sana.ui.komunitas.KomunitasFragment"
        android:label="@string/title_komunitas"
        tools:layout="@layout/fragment_komunitas" />

    <fragment
        android:id="@+id/navigation_beranda"
        android:name="com.sana.ui.beranda.BerandaFragment"
        android:label="@string/title_beranda"
        tools:layout="@layout/fragment_beranda" />

    <fragment
        android:id="@+id/navigation_akun"
        android:name="com.sana.ui.akun.AkunFragment"
        android:label="@string/title_akun"
        tools:layout="@layout/fragment_akun" />
</navigation>