<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountActivity.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Masuk"
        android:textSize="30sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="37dp"
        android:layout_marginTop="230dp"
        android:textColor="@color/bluegreen"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/eye2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="38dp"
        android:layout_marginTop="407dp"
        android:src="@drawable/eye2"
        android:onClick="ShowHidePass"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="259dp"
        android:background="@drawable/bg_daftar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:layout_marginTop="44dp"
        android:text="EMAIL"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/hint_email"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawablePadding="10dp"
        android:textColor="@color/bluegreen"
        android:textColorHint="@color/input_hint" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:layout_marginTop="12dp"
        android:text="KATA SANDI"
        android:textSize="12sp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/hint_password"
        android:textSize="14sp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="10dp"
        android:textColor="@color/bluegreen"
        android:textColorHint="@color/input_hint" />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="38dp"
        android:background="@null"
        android:gravity="end"
        android:text="Lupa kata sandi?"
        android:textAlignment="viewEnd"
        android:textAllCaps="false"
        android:textColor="@color/bluegreen"
        android:textSize="12sp"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="gone"
            android:layout_marginTop="30dp"
            tools:layout_editor_absoluteX="142dp"
            tools:layout_editor_absoluteY="162dp"
            tools:ignore="MissingConstraints" />

        <!-- Login Button -->

    <Button
        android:id="@+id/btn_login"
        android:layout_gravity="center_horizontal"
        android:layout_width="290dp"
        android:layout_height="42dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/roundbutton"
        android:text="@string/btn_login"
        android:textColor="@android:color/white" />


        <!-- Link to Register Screen -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        >

        <TextView
            android:id="@+id/tvAkun"
            android:textColor="@color/input_hint"
            android:text="Belum Punya Akun?"
            android:textSize="12sp"
            android:layout_below="@id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/link_regist"
            android:textColor="@color/bluegreen"
            android:layout_marginLeft="5dp"
            android:textSize="12sp"
            android:text="Daftar!"
            android:layout_below="@id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    </LinearLayout>

</RelativeLayout>